<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ballbot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo Harmonic simulation launch files for the Ballbot.</description>
  <maintainer email="amanrox97@gmail.com">Aman Mishra</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies for Jazzy / Gazebo Harmonic -->
  <exec_depend>ballbot_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>