<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ballbot_imu</name>
  <version>0.0.0</version>
  <description>IMU sensor integration for Ballbot (simulated BNO055)</description>
  <maintainer email="amanrox97@gmail.com">Aman Mishra</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ballbot_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>