<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ballbot_slam</name>
  <version>0.0.0</version>
  <description>SLAM implementation for Ballbot using slam_toolbox</description>
  <maintainer email="amanrox97@gmail.com">Aman Mishra</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  
  <!-- Execution Dependencies -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ros2_launch</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <!-- Ballbot specific dependencies -->
  <exec_depend>ballbot_control</exec_depend>
  <exec_depend>ballbot_description</exec_depend>
  <exec_depend>ballbot_teleop</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>